--- a/aulas-js/index.html
+++ b/aulas-js/index.html
@@ -6,11 +6,22 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Aprendendo JS</title>
+    <style>
+        body {
+            text-align: center;
+        }
+    </style>
 </head>
 
 <body>
-
-    <script src="/index.js"></script>
+    <h1>Aprendendo Javacript</h1>
+    <p id="texto"></p>
+    <p>
+        <script>
+            document.write('Oi <u>escrito com document.write</u>');
+        </script>
+    </p>
+    <script src="./index.js"></script>
 </body>
 
 </html>
